🐛 Fix link overflow bugs

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,7 @@ button {
 
 a {
   text-decoration: none;
+  word-break: break-all;
 }
 
 pre {
